# PaddleOCR-headless

./: pyproject.toml
.github/workflows/: codestyle.yml  test_gpu.yml  tests.yml
benchmark/: run_det.sh
deploy/avh/: README.md  README_ch.md  run_demo.sh
docs/version3.x/: installation.en.md  installation.md
