[build-system]
requires = ["setuptools==72.1.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paddleocr"
# After each version release, the version number needs to be incremented
dynamic = ["version"]
description = "Awesome multilingual OCR and document parsing toolkits based on PaddlePaddle"
authors = [
    {name = "PaddlePaddle", email = "paddleocr@baidu.com"},
]
maintainers = [
    {name = "PaddlePaddle", email = "paddleocr@baidu.com"},
]
readme = "README.md"
requires-python = ">=3.11,<4"
keywords = [
    "ocr",
    "textdetection",
    "textrecognition",
    "paddleocr",
    "chineseocr",
    "pp-ocr",
    "pp-structure",
    "document-parsing",
    "pdf2markdown",
    "doc2markdown",
    "docx2markdown",
    "kie",
    "pp-chatocr",
    "document-translation",
    "rag"
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    # Headless OpenCV extra, served from the fork below (see [tool.uv.sources]).
    # No version specifier: the git source builds without a tag (setuptools_scm
    # falls back to 0.0.0), so a >= constraint would not be satisfiable.
    "paddlex[ocr-core-headless]",
    "PyYAML>=6",
    "requests",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.12",
    # OCR / training-script dependencies (formerly requirements.txt).
    # OpenCV uses the headless build (no GUI / system libGL dependencies).
    "shapely",
    "scikit-image",
    "pyclipper",
    "lmdb",
    "tqdm",
    "numpy",
    "rapidfuzz",
    "opencv-python-headless",
    "opencv-contrib-python-headless",
    "cython",
    "Pillow",
    "albumentations",
    # to be compatible with albumentations
    "albucore",
    "packaging",
]

[project.urls]
homepage = "https://github.com/PaddlePaddle/PaddleOCR"
documentation = "https://github.com/PaddlePaddle/PaddleOCR/blob/main/README.md"
repository = "https://github.com/PaddlePaddle/PaddleOCR.git"
issues = "https://github.com/PaddlePaddle/PaddleOCR/issues"

[project.scripts]
paddleocr = "paddleocr.__main__:console_entry"

[project.optional-dependencies]
doc-parser = ["paddlex[ocr-headless,genai-client]"]
ie = ["paddlex[ie-headless]"]
trans = ["paddlex[trans-headless]"]
doc2md = ["python-docx>=0.8.11", "python-pptx>=0.6.21", "openpyxl>=3.0.0", "pylatexenc>=2.10,<3"]
all = ["paddlex[ocr-headless,genai-client,ie-headless,trans-headless]", "python-docx>=0.8.11", "python-pptx>=0.6.21", "openpyxl>=3.0.0"]

[tool.uv.sources]
# Use the fork that provides the `*-headless` extras (pulls the headless OpenCV
# build instead of the GUI `opencv-contrib-python`). Upstream PR:
# https://github.com/PaddlePaddle/PaddleX/pull/5169
# Once that lands in a released paddlex, this source can be removed and the
# extras pointed back at the published package.
paddlex = { git = "https://github.com/isaiah-harville/PaddleX.git", branch = "headless-opencv-extras" }

[tool.setuptools.packages.find]
where = ["."]
include = ["paddleocr", "paddleocr.*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*"]

[tool.pytest.ini_options]
markers = [
    "resource_intensive: mark a test as resource intensive",
    "py38_incompatible: test requires extras or deps that need Python 3.9+"
]
addopts = "-m 'not resource_intensive'"
